feat: added resolvePlayerTest (ValidatorsTest)